and the added code complexity and updating of cache values with LRU
counts dirties pages that would otherwise remain clean, so it was
often a loss even when VM was an issue.

Added iso2klems script to compute a Klems BSDF based on specular
and diffuse measurements as a function of incident angle.

Fixed issue with over-counting diffuse component during aBSDF
peak extraction.

Added dctimestep -x and -y options to specify image dimensions
for multiple outputs corresponding to result vectors.

Added -P option to rcalc to pass formatted input when cond is <= 0.

Created rcrop utility for cropping matrices and pictures more
conveniently, correcting view information.  Expect it to be handy
for extracting rows and columns from matrices, mostly.

Changed pcomb so -o option elides original exposure values
from indented source headers.

Added getinfo -r option, which is similar to -a except it will
replace indicated lines with new ones.

Slight change to vwrays -d option to not spit out "-ld-", and to
produce "-ld+" without requiring input picture as argument.

Added automatic overture calculation to rtpict with -n > 1 if
ambient cache is on and file is named.  If straight image output
is requested, we randomize all samples and avoid cache collisions.

Added cnt -s option to shuffle output.

Fixed issue with divide-by-zero errors in the ambient super-sampling
routine discovered by Jon Sargent of Solemma.  This affected regions
that had zero radiance, such as black backgrounds or unlit areas
with -av 0 0 0, when super-sampling was effectively disabled, causing
some loss in accuracy of the results.

Updated Klems Half- and Quarter-bases to match angles currently used
in WINDOW.

Eliminated most aiming failures for triangular light sources, at the
expense of conservative sampling near the centroid.  Thanks to
David Geisler-Moroder for his help on this.

Increased maximum set size to 8191 to avoid set overflow errors.